[package]
authors = ["Russell Greene <russellgreene8@gmail.com>"]
edition = "2018"
name = "web-mic"
version = "0.1.0"

[dependencies]
warp = {version = "0.2", features = ["tls"] }
tokio = {version = "0.2", features = ["macros", "process"] }
pretty_env_logger = "0.4"
rand = "0.7"
log = "0.4"
ctrlc = "3"
futures = "0.3"

